package com.farmovo.backend.models;

public enum SaleTransactionStatus {
    DRAFT,
    WAITING_FOR_APPROVE,
    COMPLETE,
    CANCEL
} 