package com.farmovo.backend.models;

public enum StocktakeStatus {
    DRAFT,
    COMPLETED,
    CANCELLED
}
